# cookies_utilities

./: .readthedocs.yaml  README.md  pyproject.toml
docs/source/: conf.py  cookies_utilities.rst  index.rst  modules.rst
src/cookies_utilities/: __init__.py  diff.py  stopwatch.py  timer.py
tests/: test_cookies_utilities.py  test_timer.py
