[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cookies_utilities"
version = "0.0.1"
authors = [
  { name="CookieBox26", email="cookie-box@cookie-box.info" },
]
description = "Utility functions."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
